# ai-agent-challenge

./: README.md  agent.py  generate_graph.py  pyproject.toml  requirements.txt
custom_parsers/: icici_parser.py
src/langgraphagent/: main.py
src/langgraphagent/graph/: graph_builder.py
src/langgraphagent/llms/: llmgroq.py
src/langgraphagent/nodes/: coder_node.py  corrector_node.py  planner_node.py  tester_node.py
src/langgraphagent/state/: state.py
src/langgraphagent/tools/: file_tools.py  test_tools.py
tests/: test_gen_parser.py
